Archive2/ab/e78219c52c5941/output
main.cpp:7:5: error: no matching function for call to 'foo'
    foo(s.c_str());
    ^~~
main.cpp:3:6: note: candidate function not viable: 1st argument ('const_pointer' (aka 'const char *')) would lose const qualifier
void foo(char *);
     ^
1 error generated.
