Archive2/ab/e78219c52c5941/main.cpp
#include <string>

void foo(char *);

int main() {
    std::string s;
    foo(s.c_str());
}